Update to run first iteration of PPO (with global map policy)

--- a/habitat_conf.yaml
+++ b/habitat_conf.yaml
@@ -1,8 +1,8 @@
 DATASET:
   TYPE: PointNav-v1
   SPLIT: train
-  DATA_PATH: ../habitat-lab/data/datasets/pointnav/habitat-test-scenes/v1/{split}/{split}.json.gz
-  SCENES_DIR: ../habitat-lab/data/scene_datasets/
+  DATA_PATH: data/datasets/pointnav/habitat-test-scenes/v1/{split}/{split}.json.gz
+  SCENES_DIR: data/scene_datasets/
 SIMULATOR:
   AGENT_0:
     SENSORS: ['RGB_SENSOR', 'DEPTH_SENSOR', 'SEMANTIC_SENSOR']
