--- a/config/habitat_pointnav_config.yaml
+++ b/config/habitat_pointnav_config.yaml
@@ -30,7 +30,7 @@ TASK:
   # early training.
   POSSIBLE_ACTIONS: ["MOVE_FORWARD", "TURN_LEFT", "TURN_RIGHT"]
 
-DATASET:
-  TYPE: PointNav-v1
-  SPLIT: train
-  DATA_PATH: data/datasets/pointnav/gibson/v1/{split}/{split}.json.gz
+#DATASET:
+#  TYPE: PointNav-v1
+#  SPLIT: train
+#  DATA_PATH: data/datasets/pointnav/gibson/v1/{split}/{split}.json.gz
