Fix map sensor config

--- a/config/habitat_config.yaml
+++ b/config/habitat_config.yaml
@@ -10,7 +10,7 @@ VIDEO_DIR: "video_dir"
 TEST_EPISODE_COUNT: 2
 EVAL_CKPT_PATH_DIR: "data/new_checkpoints"
 NUM_PROCESSES: 1
-SENSORS: ["RGB_SENSOR"]
+SENSORS: ["MAP_SENSOR"]
 CHECKPOINT_FOLDER: "data/new_checkpoints"
 NUM_UPDATES: 10000
 LOG_INTERVAL: 10
