--- a/config/habitat_pointnav_config.yaml
+++ b/config/habitat_pointnav_config.yaml
@@ -2,7 +2,7 @@ ENVIRONMENT:
   MAX_EPISODE_STEPS: 500
 SIMULATOR:
   AGENT_0:
-    SENSORS: ['RGB_SENSOR','MAP_SENSOR']
+    SENSORS: ['MAP_SENSOR']
   HABITAT_SIM_V0:
     GPU_DEVICE_ID: 0
   RGB_SENSOR:
@@ -11,10 +11,14 @@ SIMULATOR:
   DEPTH_SENSOR:
     WIDTH: 256
     HEIGHT: 256
+  MAP_SENSOR:
+    WIDTH: 256
+    HEIGHT: 256
+    HFOV: 90
+    TYPE: 'MAP_SENSOR'
 TASK:
   TYPE: Nav-v0
   SUCCESS_DISTANCE: 0.2
-
   SENSORS: ['POINTGOAL_WITH_GPS_COMPASS_SENSOR']
   POINTGOAL_WITH_GPS_COMPASS_SENSOR:
     GOAL_FORMAT: "POLAR"
