--- a/config/habitat_pointnav_config.yaml
+++ b/config/habitat_pointnav_config.yaml
@@ -2,7 +2,7 @@ ENVIRONMENT:
   MAX_EPISODE_STEPS: 500
 SIMULATOR:
   AGENT_0:
-    SENSORS: ['MAP_SENSOR']
+    SENSORS: ["RGB_SENSOR", 'MAP_SENSOR']
   HABITAT_SIM_V0:
     GPU_DEVICE_ID: 0
   RGB_SENSOR:
