--- a/config/habitat_pointnav_small_config.yaml
+++ b/config/habitat_pointnav_small_config.yaml
@@ -2,7 +2,7 @@ ENVIRONMENT:
   MAX_EPISODE_STEPS: 500
 SIMULATOR:
   AGENT_0:
-    SENSORS: ['RGB_SENSOR','MAP_SENSOR']
+    SENSORS: ['RGB_SENSOR','MAP_SENSOR','EGOMOTION']
   HABITAT_SIM_V0:
     GPU_DEVICE_ID: 0
   RGB_SENSOR:
@@ -16,6 +16,9 @@ SIMULATOR:
     HEIGHT: 256
     HFOV: 90
     TYPE: 'MAP_SENSOR'
+  EGOMOTION:
+    TYPE: 'EGOMOTION'
+    HFOV: 90
 TASK:
   TYPE: Nav-v0
   SUCCESS_DISTANCE: 0.2
